// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncGitRepo should render ansible playbook directory-form 1`] = `
<span>
  <div>
    <ScmTypeSelector
      editable={true}
      hidden={false}
      label="SCM Type *"
      onChange={[Function]}
      options={Object {}}
      selectValue="directory"
    />
    <FormTextInput
      editable={true}
      label="Directory Path *"
      onChange={[Function]}
      parameter="path"
      viewText=""
    />
    <div />
    <div
      className="form-group"
    >
      <div
        className="col-md-2"
      />
      <div
        className="col-md-4"
      >
        <pre>
          Directory path cannot be blank
        </pre>
      </div>
    </div>
  </div>
</span>
`;

exports[`SyncGitRepo should render ansible playbook directory-form with server-data 1`] = `
<span>
  <div>
    <ScmTypeSelector
      editable={true}
      hidden={false}
      label="SCM Type *"
      onChange={[Function]}
      options={
        Object {
          "directory": "directory",
          "git": "git",
        }
      }
      selectValue="directory"
      viewText="directory"
    />
    <FormTextInput
      editable={true}
      label="Directory Path *"
      onChange={[Function]}
      parameter="path"
      viewText="/ansible/play_hello.yaml"
    />
    <div />
    <div />
  </div>
</span>
`;

exports[`SyncGitRepo should render ansible playbook git-form 1`] = `
<span>
  <div>
    <ScmTypeSelector
      editable={true}
      hidden={false}
      label="SCM Type *"
      onChange={[Function]}
      options={Object {}}
      selectValue="git"
    />
    <FormTextInput
      editable={true}
      label="Git Url *"
      onChange={[Function]}
      parameter="git_url"
      viewText=""
    />
    <div />
    <div
      className="form-group"
    >
      <div
        className="col-md-2"
      />
      <div
        className="col-md-4"
      >
        <pre>
          Git URL cannot be blank
        </pre>
      </div>
    </div>
    <FormTextInput
      editable={true}
      label="Git Branch/Commit/Tag"
      onChange={[Function]}
      parameter="git_commit"
      viewText=""
    />
    <CommonForm>
      <span
        className="help-block help-inline"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={false}
          onClick={[Function]}
        >
          Sync Repository
           
        </Button>
      </span>
    </CommonForm>
  </div>
</span>
`;

exports[`SyncGitRepo should render ansible playbook git-form with server-data 1`] = `
<span>
  <div>
    <ScmTypeSelector
      editable={true}
      hidden={false}
      label="SCM Type *"
      onChange={[Function]}
      options={
        Object {
          "directory": "directory",
          "git": "git",
        }
      }
      selectValue="git"
      viewText="git"
    />
    <FormTextInput
      editable={true}
      label="Git Url *"
      onChange={[Function]}
      parameter="git_url"
      viewText="https://git.example.com/playbooks.git"
    />
    <div />
    <div />
    <FormTextInput
      editable={true}
      label="Git Branch/Commit/Tag"
      onChange={[Function]}
      parameter="git_commit"
      viewText="main"
    />
    <CommonForm>
      <span
        className="help-block help-inline"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={false}
          onClick={[Function]}
        >
          Sync Repository
           
        </Button>
      </span>
    </CommonForm>
  </div>
</span>
`;

exports[`SyncGitRepo should render empty ansible playbook 1`] = `
<span>
  <div>
    <ScmTypeSelector
      editable={true}
      hidden={false}
      label="SCM Type *"
      onChange={[Function]}
      options={Object {}}
      selectValue=""
    />
    <div />
    <div
      className="form-group"
    >
      <div
        className="col-md-2"
      />
      <div
        className="col-md-4"
      >
        <pre>
          SCM Type cannot be blank
        </pre>
      </div>
    </div>
  </div>
</span>
`;
